// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message renders error message correctly 1`] = `
<div
  className="error css-0"
>
  Error Message
</div>
`;

exports[`Message renders info message correctly 1`] = `
<div
  className="info css-0"
>
  Error Message
</div>
`;

exports[`Message renders warn message correctly 1`] = `
<div
  className="warn css-0"
>
  Error Message
</div>
`;
